techzaa.in/techauth/assets/css/button-styles.css
/* Ripple Effect Button Styles */
.button {
  display: inline-block;
  padding: 8px 16px;
  border: 1px solid #4f4f4f;
  border-radius: 4px;
  transition: all 0.2s ease-in;
  position: relative;
  overflow: hidden;
  font-size: 14px;
  cursor: pointer;
  color: black;
  z-index: 1;
  background: transparent;
  font-weight: 600;
  white-space: nowrap;
}

.button:before {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%) scaleY(1) scaleX(1.25);
  top: 100%;
  width: 140%;
  height: 180%;
  background-color: rgba(0, 0, 0, 0.05);
  border-radius: 50%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.button:after {
  content: "";
  position: absolute;
  left: 55%;
  transform: translateX(-50%) scaleY(1) scaleX(1.45);
  top: 180%;
  width: 160%;
  height: 190%;
  background-color: #39bda7;
  border-radius: 50%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.button:hover {
  color: #ffffff;
  border: 1px solid #39bda7;
}

.button:hover:before {
  top: -35%;
  background-color: #39bda7;
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

.button:hover:after {
  top: -45%;
  background-color: #39bda7;
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

/* Button Color Variants */
.button-red:after,
.button-red:before {
  background-color: #dc2626;
}

.button-red:hover {
  border-color: #dc2626;
}

.button-red:hover:before,
.button-red:hover:after {
  background-color: #dc2626;
}

.button-green:after,
.button-green:before {
  background-color: #16a34a;
}

.button-green:hover {
  border-color: #16a34a;
}

.button-green:hover:before,
.button-green:hover:after {
  background-color: #16a34a;
}

.button-blue:after,
.button-blue:before {
  background-color: #2563eb;
}

.button-blue:hover {
  border-color: #2563eb;
}

.button-blue:hover:before,
.button-blue:hover:after {
  background-color: #2563eb;
}

.button-teal:after,
.button-teal:before {
  background-color: #39bda7;
}

.button-teal:hover {
  border-color: #39bda7;
}

.button-teal:hover:before,
.button-teal:hover:after {
  background-color: #39bda7;
}

